--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,12 @@
   <head>
     <title>Spoor</title>
     <script src="popup.js"></script>
+    <script src="jquery.js"></script>
   </head>
   <body>
     <h1>GTmetrix Analyzer</h1>
     <button id="checkPage">We will see stuffs here</button>
+    <br/>Github Requests Number <div id="githubCount">0</div>
+    <br/>Github Pull Requests<div id="githubRequests"></div>
   </body>
 </html>
