--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,8 @@
     <title>Spoor</title>
     <script src="popup.js"></script>
     <script src="jquery.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>GTmetrix Analyzer</h1>
