--- a/background/background.html
+++ b/background/background.html
@@ -1,3 +1,4 @@
 <script src="background.js"></script>
 <script src="../ui/js/github.js"></script>
 <script src="../ui/js/jquery.js"></script>
+<script src="../ui/js/crucible.js"></script>
