--- a/background/background.html
+++ b/background/background.html
@@ -1,4 +1,5 @@
-<script src="background.js"></script>
-<script src="../ui/js/github.js"></script>
+<!--<script src="../ui/js/github.js"></script> -->
 <script src="../ui/js/jquery.js"></script>
-<script src="../ui/js/crucible.js"></script>
+<script src="../ui/js/jira.js"></script> 
+<script src="background.js"></script>
+
