--- a/ui/index.html
+++ b/ui/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Spoor</title>
-  <link href='app.css' rel='stylesheet' />
+  <link href='css/main.css' rel='stylesheet' />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,600,500italic,300' rel='stylesheet' />
-  <link href='//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css' rel='stylesheet' />
   <script src="js/jquery.js"></script>
-  <script src="js/jquery.cookie.js"></script>
+  <!--<script src="js/jquery.cookie.js"></script>-->
   <script src="js/jira.js"></script>
 </head>
 <body>
