GIT_DineshB-New

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
   <link href='css/main.css' rel='stylesheet' />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,600,500italic,300' rel='stylesheet' />
   <script src="js/jquery.js"></script>
-  <!--<script src="js/jquery.cookie.js"></script>-->
+  <script src="js/jquery.cookie.js"></script>
   <script src="js/jira.js"></script>
 </head>
 <body>
