--- a/background/background.html
+++ b/background/background.html
@@ -1,2 +1,6 @@
+<!--<script src="../ui/js/github.js"></script> -->
+<script src="../ui/js/jquery.js"></script> 
+<script src="../ui/js/jquery.cookie.js"></script>
+<script src="../ui/js/jira.js"></script> 
 <script src="background.js"></script>
-<script src="../ui/js/jquery.js"></script>
+
